Fixed invisible scroll bar on listviews.

--- a/src/main/resources/style.css
+++ b/src/main/resources/style.css
@@ -95,6 +95,8 @@
     -fx-background-color: #444444;
     -fx-text-fill: #ffffff;
     -fx-text-background-color: #ffffff;
+    -fx-border-color: white;
+    -fx-border-width: .1
 }
 
 .list-cell:focused {
